--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.1",
     "react-scripts": "4.0.0",
+    "recoil": "0.7.2",
     "styled-components": "5.3.5"
   },
   "devDependencies": {
